langchain and anthropic

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@langchain/anthropic": "^0.3.8",
+    "@langchain/core": "^0.3.20",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
@@ -21,8 +23,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.465.0",
-    "next": "^14",
+    "next": "^14.2.20",
+    "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
