--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "reactflow": "^11.11.4",
     "sonner": "^1.7.0",
     "sooner": "^1.1.4",
+    "starknet": "^6.11.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
