--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@xyflow/react": "^12.3.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.13.1",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.465.0",
@@ -32,9 +33,8 @@
     "react-hook-form": "^7.53.2",
     "reactflow": "^11.11.4",
     "sonner": "^1.7.0",
-    "sooner": "^1.1.4",
-    "starknet": "^6.11.0",
     "sooner": "^1.1.1",
+    "starknet": "^6.11.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
