--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "ethers": "^6.13.4",
     "framer-motion": "^11.13.1",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.465.0",
@@ -34,6 +35,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "reactflow": "^11.11.4",
+    "solc": "^0.8.28",
     "sonner": "^1.7.0",
     "sooner": "^1.1.1",
     "starknet": "^6.11.0",
