--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@langchain/anthropic": "^0.3.8",
     "@langchain/core": "^0.3.20",
+    "@openzeppelin/contracts": "^5.1.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
