--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@langchain/anthropic": "^0.3.8",
     "@langchain/core": "^0.3.20",
+    "@langchain/openai": "^0.3.14",
     "@openzeppelin/contracts": "^5.1.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -21,6 +22,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@starknet-react/chains": "^3.1.0",
+    "@starknet-react/core": "^3.6.2",
     "@xyflow/react": "^12.3.5",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +32,7 @@
     "ethers": "^6.13.4",
     "framer-motion": "^11.13.1",
     "fs": "^0.0.1-security",
+    "langchain": "^0.3.6",
     "lucide-react": "^0.465.0",
     "next": "^14.2.20",
     "path": "^0.12.7",
